# vardbg

./: .gitignore  .pre-commit-config.yaml  CODE_STYLE.md  LICENSE  README.md  debug.py  debugger.py  demo_config.toml  pyproject.toml  requirements.txt  test.py  test_algos.py  video.toml  video_demo.toml
.github/: dependabot.yml
algo_tests/: __init__.py  misc.py  searching.py  test_misc.py  test_searching.py  test_sorting.py
tests/: bubble_sort.py  insertion_sort.py  run_algos.py  simple.py
tests/algos/: run.py  searching.py  sorting.py  test_searching.py
vardbg/: __init__.py  __main__.py  ansi.py  console_output.py  data.py  debugger.py  diff_processor.py  internal.py  main.py  profiler.py  render.py  replayer.py  test.py  timing.py  tracer.py
vardbg/assets/styles/: default.py  wood.py
vardbg/output/: __init__.py  console_writer.py  json_writer.py  output_delegate.py  video_writer.py  writer.py
vardbg/output/video_writer/: __init__.py  config.py  default_config.toml  encoder.py  getstyle.py  gif_encoder.py  opencv_encoder.py  renderer.py  text_format.py  text_painter.py  webp_encoder.py  writer.py
